--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -23,11 +23,11 @@
 <table align='center' class="top">
 	<tr>
 		<td valign='top'>
-			<div align='center'><font size='3'><b>Space Station 13</b></font></div>
+			<div align='center'><font size='3'><b>Space Station 13</font></div>
 			
 			<p><div align='center'><font size='3'><a href="http://wiki.baystation12.net/">Оригинальная Вики Baystation 12</a> | <a href="https://github.com/Baystation12/Baystation12/">Оригинальный код Baystation 12</a> | <a href="https://wiki.infinity-ss13.ru/">Наша Вики Baystation 12</a> | <a href="https://github.com/infinitystation/Baystation12/">Наш репозиторий</a></font></div></p>
             <font size='2'>Код лицезирован под <a href="http://www.gnu.org/licenses/agpl.html">AGPLv3</a>. Контент лицензирован под <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>.<br><br>
-			<font size='2'><b>Посетите наш сервер в дискорде:</b> https://discord.gg/mn456xK </font>
+			<font size='2'><b>Посетите наш сервер в дискорде: https://discord.gg/mn456xK </font>
 			</td>
 	</tr>
 </table>
@@ -36,14 +36,14 @@
 <table align='center' class="top">
 	<tr>
 		<td valign='top'>
-            <font size='2'><b>Текущие мейнтейнеры проекта:</b> <a href='https://github.com/infinitystation/Baystation12?tab=members'>-Буп-</a><br></font>
-			<font size='2'><b>Список активных участников репозитория:</b> <a href='https://github.com/infinitystation/Baystation12/graphs/contributors'>-Буп-</a><br></font>
-			<font size='2'><b>Кодеры:</b> Bear1ake, Sladkoeshka, Liners, KareTa<br></font>
-			<font size='2'><b>Спрайтеры:</b> Temblrex, Kettenhund, TwinInDifferent <br></font>
-			<font size='2'><b>Мапперы:</b> Terror4000rus<br></font>
-			<font size='2'><b>Звуки:</b> Любой из предложивших<br></font>
-			<font size='2'><b>Большое спасибо:</b> Baystation 12, Eris-Station (CEV-Eris), Solaris Station 13, /tg/ station, Paradise Station, AuroraStation, Polaris Station, /vg/station, GoonStation devs, оригинальные разработчики Space Station 13 и Invisty за картинку в лобби (для англоязычного сообщества Baystation 12).<br> Также спасибо всем, кто внёс свой вклад, но не попал сюда. Если хотите попасть сюда, обратитесь в дискорд или на форум.</font>
-			<font size='2' color='red'><b><br>Нашли баг?</b> Посетите наш багтрекер <a href="https://github.com/infinitystation/Baystation12/issues?labels=Bug&state=open">~Тюк~</a>.<br></font>
+            <font size='2'><b>Текущие мейнтейнеры проекта: <a href='https://github.com/infinitystation/Baystation12?tab=members'>-Буп-</a><br></font>
+			<font size='2'><b>Список активных участников репозитория: <a href='https://github.com/infinitystation/Baystation12/graphs/contributors'>-Буп-</a><br></font>
+			<font size='2'><b>Кодеры: Bear1ake, Sladkoeshka, Liners, KareTa<br></font>
+			<font size='2'><b>Спрайтеры: Temblrex, Kettenhund, TwinInDifferent <br></font>
+			<font size='2'><b>Мапперы: Terror4000rus<br></font>
+			<font size='2'><b>Звуки: Любой из предложивших<br></font>
+			<font size='2'><b>Большое спасибо: Baystation 12, Eris-Station (CEV-Eris), Solaris Station 13, /tg/ station, Paradise Station, AuroraStation, Polaris Station, /vg/station, GoonStation devs, оригинальные разработчики Space Station 13 и Invisty за картинку в лобби (для англоязычного сообщества Baystation 12).<br> Также спасибо всем, кто внёс свой вклад, но не попал сюда. Если хотите попасть сюда, обратитесь в дискорд или на форум.</font>
+			<font size='2' color='red'><b><br>Нашли баг? Посетите наш багтрекер <a href="https://github.com/infinitystation/Baystation12/issues?labels=Bug&state=open">~Тюк~</a>.<br></font>
 		</td>
 	</tr>
 </table>
@@ -56,6 +56,13 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">20 February 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="spellcheck">Передены некоторые сообщения о повреждениях органов персонажей. В случае обнаружения ошибок, сообщите разработчикам.</li>
+				<li class="rscadd">Добавлен(?) интерфейс Midnight-old. По-сути, это старый интерфейс midnight. Переключение по желанию.</li>
+			</ul>
+
 			<h2 class="date">18 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
