Ошейники для низших рас.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,13 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">22 February 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлены ошейники для представителей низших рас. Кто низший - решайте сами. Можно приобрести в аксессуарах лодаута.</li>
+				<li class="rscadd">В технических помещениях с маленьким шансом может появиться ошейник для любителей ходить без изоляционных перчаток.</li>
+			</ul>
+
 			<h2 class="date">20 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
