--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,15 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">23 February 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="balance">Занерфлен дрон: снижена общая скорость, ИИ теряет сигнал при достижении 0 хп, а не -35. За то, дроны теперь не толкаются, если они не индустриальные.</li>
+				<li class="maptweak">На пост охраны РНД добавлено второе кресло и маленькое рабочее место для оного.</li>
+				<li class="imageadd">'Заичьи норы' в технических тоннелях более заметны. В частности, из-за матросов.</li>
+				<li class="experiment">Унатхи могут в каптенармусов и следователей. Нужен фидбэк. Волнует реген.</li>
+			</ul>
+
 			<h2 class="date">22 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
