--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,16 +56,31 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">28 February 2018</h2>
+			<h3 class="author">Обновление от Netreson:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлена новая прическая 'zone' (для людей).</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Ядерный реактор нищих помимо водки потребляет воду, но от неё он охлаждается и недовольно гудит.</li>
+				<li class="tweak">Деревянный алтарь из церкви и технических помещений можно собрать из трёх досок.</li>
+				<li class="imageadd">Добавлены отдельные спрайты скафандров для таяр: ниндзя, СЕ, E.V.A. (РИГи).</li>
+				<li class="imageadd">Изменён спрайт ошейников в руке и минимально на персонаже. Добавлены спрайты для унатхов и резоми.</li>
+				<li class="wip">Где-то в секторе потерялась маленькая акула.</li>
+			</ul>
+
 			<h2 class="date">26 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
 				<li class="wip">Некоторые изменения/исправления/улучшения на патрульном судне.</li>
 				<li class="rscadd">Практически бесполезная секция гаупвахты с практически полезным арсеналом доделана.</li>
-				<li class="tweak">Множество заметных и не слишком важных изменений на карте, в целом.</li>
-				<li class="tweak">В шкафчиках для скафандров КМП заменены кислородные боллоны на более практичные аналоги, что можно поместить в карман.</li>
-				<li class="tweak">В каждый шкафчик КМП добавлено по комплекту брони и шлему. Медику добавлена сумка с заготовленными медикаментами.</li>
-				<li class="tweak">Технически устаревший Z8 'Бульдог' был заменён новым Z9 'Гадюка', стандартные магазины были заменены на расширенные.</li>
-				<li class="tweak">Из-за финансовых затрат на перевооружение и дозаказ материалов, экипаж экономит на еде. Приятного аппетита.</li>
+				<li class="tweak">Инспектор корабельной пожарной охраны потребовал слишком большую взятку, из-за чего в важных или легковоспломиняемых помещениях появились огнетушители.</li>
+				<li class="tweak">В шкафчик медиков отдельно добавлен рюкзак с заготовленными медикаментами.</li>
+				<li class="tweak">В шкафчиках для скафандров КМП заменены кислородные боллоны. Вашу винтовку больше не нужно держать в руках всю операцию.</li>
+				<li class="tweak">После пробития неопознанного объекта над головой экипажа космическим песком было принято решение об укреплении мифического 'потолка'.</li>
+				<li class="tweak">Лидеру отряда КМП на патрульном судне стало настолько стыдно за то, что они используют устаревший Z8 'Бульдог', что было принято необдуманное и дорогостоящее решение о перевооружении на Z9 'Гадюка' и приобретии расширенных магазинов. Экипаж кушает консервы.</li>
+				<li class="tweak">Множество мелких и не очень изменений, о которых благополучно забыли. Enjoy.</li>
 				<li class="wip">Что касается глобальных изменений(?).</li>
 				<li class="tweak">Баночки с заранее заготовленными таблетками в большинстве своём получили новую окраску. Если коротко, то: красные против ушибов, жёлтые против ожогов, синие против удушья, зелёные против печени и внутренних органов, розовые против 'боли', белые для мозга.</li>
 				<li class="rscadd">Для администрации: во вкладку Server была добавлена кнопка End Round. Используется для запуска титров и нормального завершения раунда без эвакуации и резкого рестарта.</li>
@@ -80,7 +95,7 @@
 				<li class="rscadd">...Экипаж корабля состоит из 12 человек, 6 из которых принадлежат к флоту, а 6 к морской пехоте.</li>
 				<li class="rscadd">Флот управляет кораблем и обслуживает раненых после эвакуации чрезмерно поврежденного дружеского судна. Во флоте могут быть люди и ИПК. Состоит из капитана, офицера, инженера, двух врачей и одного матроса, так же выполняющего роли: повара, заряжающего торпедного аппарата, уборщика, прикуривателя.</li>
 				<li class="rscadd">Корабль оборудован достаточно скудно - к вопросу о том, почему вы можете найти всего 4 сварочных аппарат. Из оснащения можно особо выделить импульсную пушку, превосходящую по силе аналогичную на торче и способную без проблем разобрать судно размером с биркэт.</li>
-				<li class="rscadd">Морпехи обеспечивают  силовой вариант поддержки: ликвидируют абордажников своего и чужих кораблей, эвакуируют персонал с дружественных кораблей.</li>
+				<li class="rscadd">Морпехи обеспечивают  силовой вариант поддержки: ликвидируют обордажников своего и чужих кораблей, эвакуируют персонал с дружественных кораблей.</li>
 				<li class="rscadd">Краткое руководство для морпехов: не вылетайте на пустой желудок; арсенал не может быть открыт без командира отряда; не одевайтесь сразу - вам ещё нужно долететь до торча; радиоканал отряда - :h (у командира также есть командный канал).</li>
 				<li class="rscadd">Админам - корабль спавнится по следующему пути: Fun > Map Template - New Z > Sol Patrol Craft (ERT). Спавн длится примерно минуту и никак не отображается в чате До своего завершения. НЕ спавните два корабля и впринципе не прожимайте такой спавн дважды.</li>
 				<li class="rscadd">Отделу разработки очень важен ваш фидбэк. Докладывайте о всех неподалках, что заметите на патрульном корабле.</li>
