--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -36,14 +36,14 @@
 <table align='center' class="top">
 	<tr>
 		<td valign='top'>
-            <font size='2'><b>Текущие мейнтейнеры проекта: <a href='https://github.com/infinitystation/Baystation12?tab=members'>-Буп-</a><br></font>
-			<font size='2'><b>Список активных участников репозитория: <a href='https://github.com/infinitystation/Baystation12/graphs/contributors'>-Буп-</a><br></font>
-			<font size='2'><b>Кодеры: Bear1ake, Sladkoeshka, Liners, KareTa<br></font>
-			<font size='2'><b>Спрайтеры: Temblrex, Kettenhund, TwinInDifferent <br></font>
-			<font size='2'><b>Мапперы: Terror4000rus<br></font>
-			<font size='2'><b>Звуки: Любой из предложивших<br></font>
-			<font size='2'><b>Большое спасибо: Baystation 12, Eris-Station (CEV-Eris), Solaris Station 13, /tg/ station, Paradise Station, AuroraStation, Polaris Station, /vg/station, GoonStation devs, оригинальные разработчики Space Station 13 и Invisty за картинку в лобби (для англоязычного сообщества Baystation 12).<br> Также спасибо всем, кто внёс свой вклад, но не попал сюда. Если хотите попасть сюда, обратитесь в дискорд или на форум.</font>
-			<font size='2' color='red'><b><br>Нашли баг? Посетите наш багтрекер <a href="https://github.com/infinitystation/Baystation12/issues?labels=Bug&state=open">~Тюк~</a>.<br></font>
+            <font size='2'><b>Текущие мейнтейнеры проекта:</b> <a href='https://github.com/infinitystation/Baystation12?tab=members'>-Гиперссылка-</a><br></font>
+			<font size='2'><b>Список активных участников репозитория:</b> <a href='https://github.com/infinitystation/Baystation12/graphs/contributors'>-Гиперссылка-</a><br></font>
+			<font size='2'><b>Кодеры:</b> Bear1ake, Sladkoeshka, Liners, KareTa<br></font>
+			<font size='2'><b>Спрайтеры:</b> Temblrex, Kettenhund, TwinInDifferent <br></font>
+			<font size='2'><b>Мапперы:</b> Terror4000rus<br></font>
+			<font size='2'><b>Звуки:</b> Любой из предложивших<br></font>
+			<font size='2'><b>Большое спасибо:</b> Baystation 12, Eris-Station (CEV-Eris), Solaris Station 13, /tg/ station, Paradise Station, AuroraStation, Polaris Station, /vg/station, GoonStation devs, оригинальные разработчики Space Station 13 и Invisty за картинку в лобби (для англоязычного сообщества Baystation 12).<br> Также спасибо всем, кто внёс свой вклад, но не попал сюда. Если хотите попасть сюда, обратитесь в дискорд или на форум.</font>
+			<font size='2' color='red'><b><br>Нашли баг?</b> Посетите наш багтрекер <a href="https://github.com/infinitystation/Baystation12/issues?labels=Bug&state=open">-Гиперссылка-</a>.<br></font>
 		</td>
 	</tr>
 </table>
@@ -56,6 +56,17 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">01 March 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В список админского спавна добавлена канонерка (Sol Gunboat Craft).</li>
+				<li class="rscadd">Экипаж канонерки - 4 человека (хотя им в т.ч. могут быть IPC). Капитан, артиллерист, врач и инженер.</li>
+				<li class="bugfix">Исправлено отображение ошейников на резоми.</li>
+				<li class="bugfix">Исправлено отображение ошейников при надевании на слот маски.</li>
+				<li class="tweak">Бюджетные спасательные капсулы теперь не мешают проходу. Заходите на тайл, залезайте и взлетайте.</li>
+				<li class="balance">Изменено содержимое наномедов в соответствии с описанием.</li>
+			</ul>
+
 			<h2 class="date">28 February 2018</h2>
 			<h3 class="author">Обновление от Netreson:</h3>
 			<ul class="changes bgimages16">
