--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,14 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">02 March 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="balance">Мощность ионных двигателей была снижена с 10 пунктов до 1.</li>
+				<li class="maptweak">Ставни технического помещения РНД были возвращены в ущерб карго.</li>
+				<li class="maptweak">Исправления на канонерке.</li>
+			</ul>
+
 			<h2 class="date">01 March 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
