Спеллчек правил, чейнджлог.

--- a/config/rules.html
+++ b/config/rules.html
@@ -41,7 +41,7 @@
 <table border=1>
 <tr height=30><td> Не засоряйте OOC флудом или спамом. </tr>
 <tr height=30><td> Разделяйте IC и OOC.</td>
-<tr height=30><td> Использовать мата в любой его форме, браниться, оскорблять других вне IC запрещено.</td>
+<tr height=30><td> Использовать мат в любой его форме, браниться, оскорблять других вне IC запрещено.</td>
 </table>
 <br>
 <strong><span style="color: #ff0000;">Администрация и Сотрудники </span></strong><br>
@@ -49,7 +49,7 @@
 <table border=1>
 <tr height=30><td> Администрация может вмешиваться в игру при необходимости.</td>
 <tr height=30><td> Adminhelp используется исключительно для внутреигровых причин.</td>
-<tr height=30><td> При общение с администрацией четко формулируйте свои сообщения и придерживайтесь хорошего тона.</td>
+<tr height=30><td> При общении с администрацией четко формулируйте свои сообщения и придерживайтесь хорошего тона.</td>
 <tr height=30><td> Употребление слов "Педаль", "Вахтер" в отношение администрации и сотрудников сервера запрещено.</td>
 <tr height=30><td> Решения администраторов являются окончательными и обсуждению в АХ не подлежат.</td>
 </table>
@@ -110,7 +110,7 @@
 <tr height=30><td> Наличие роли антагониста не позволяет нарушать правила сервера.</tr>
 <tr height=30><td> Наличие роли антагониста - не наличие лицензии на убийство.</td>
 <tr height=30><td> Некоторые антагонисты имеют ограничения в плане отыгрыша. Нюкеры не могут стать членами персонала, например.</td>
-<tr height=30><td> Основной источники обеспечения корабля энергией и обеспечения атмосферой имеют неприкосновенность в плане саботажа.</td>
+<tr height=30><td> Основные источники обеспечения корабля энергией и обеспечения атмосферой имеют неприкосновенность в плане саботажа.</td>
 <tr height=30><td> Выполнение целей в зоне эвакуации (спасательные капсулы) запрещено.</td>
 </table>
 <br>
