--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,26 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">03 March 2018</h2>
+			<h3 class="author">Обновление от Bill-Luxe:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлено переносное радио. Работает на касетах, в которые можно загружать музыку прямо с вашего ПК (главное, чтобы файл был не слишком большим и расширение было 'OGG'). Имеют тенденцию взрываться по Божьей воле в случае проигрывания откровенно плохих треков.</li>
+				<li class="rscadd">Добавлен красивый оверлей при общении через голопад.</li>
+				<li class="wip">Исправлено отображение говорящего на голопаде.</li>
+				<li class="tweak">Медальоны (lockets) могут содержать небольшое описание своего содержимого - редактируется через клик ручкой. Показывается при осмотре медальна.</li>
+			</ul>
+			<h3 class="author">Обновление от RuCat:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Портированы электрическая дрель (отвертка + гаечный ключ) и пожарные клешни (монтировка + кусачки).</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В проигрыватель добавлена почти вся отсутствующая музыка, что есть в билде: 'A light in the Darkness', 'Blues in Velvet Room', 'Comet Haley', 'I just don't understand You', 'Elevator', 'First', 'To the Stars', 'Lysendra', 'Marhaba', 'Salute John', 'Space Oddity', 'Treacherous Voyage', 'Thunderdome'. Наслаждайтесь.</li>
+				<li class="rscadd">В меню выдачи снаряжения через админку добавлена экипировка Частных Военных Компаний: PCRC и SAARE.</li>
+				<li class="tweak">Практически всё огнестрельное и лазерное оружие получило название, которое должно иметь исходя из описания.</li>
+				<li class="spellcheck">Мелкие очепятки в правилах исправлены. Благодарим за фидбэк.</li>
+			</ul>
+
 			<h2 class="date">02 March 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
