Небольшое дополнение к реконнекту.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,8 +56,15 @@
 		
 		-->
 		<div class="commit sansserif">
-			<h2 class="date">03 March 2018</h2>
+			<h2 class="date">04 March 2018</h2>
 			<h3 class="author">Обновление от Bill-Luxe:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Энергокатана ниндзи больше не работает при включенной невидимости.</li>
+				<li class="rscdel">Убил пару назойлевых мух.</li>
+			</ul>
+
+			<h2 class="date">03 March 2018</h2>
+			<h3 class="author">Обновление от Quardbreak:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">Добавлено переносное радио. Работает на касетах, в которые можно загружать музыку прямо с вашего ПК (главное, чтобы файл был не слишком большим и расширение было 'OGG'). Имеют тенденцию взрываться по Божьей воле в случае проигрывания откровенно плохих треков.</li>
 				<li class="rscadd">Добавлен красивый оверлей при общении через голопад.</li>
