--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,15 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">05 March 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В помещение со снаряжением инженерного отдела и прилижайщие технически помещения добавлены воздушные датчики.</li>
+				<li class="rscadd">Канонерка и корабль ЕРТ получили метки для бомбардировки. Устраивайте неравные космические бои наздоровье.</li>
+				<li class="bugfix">Харон снова летает.</li>
+				<li class="imageadd">Добавлены иконки для искуственной (?) бумаги. Большая часть спрайтов с бюрократией была перенесена в новую папку - если в ваших руках будет невидимая ручка или талисман культистов, пожалуйста - сообщите.</li>
+			</ul>
+
 			<h2 class="date">04 March 2018</h2>
 			<h3 class="author">Обновление от Bill-Luxe:</h3>
 			<ul class="changes bgimages16">
