--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,24 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">06 March 2018</h2>
+			<h3 class="author">Обновление от Bill-Luxe:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлено потерянное затемнение у основания стенок.</li>
+				<li class="rscadd">Добавлена нанобумага с возможностью вставлять в оную картинки. Пока нет на карте.</li>
+				<li class="rscadd">Пристегните ремни, потому-что разгон шаттла в начале и конце полета впечатает вас в стену, вероятно, сломав руку, ногу или чего похуже. На данный момент, имеется лишь у Харона и Гаппи.</li>
+				<li class="experiment">Изменён скайбокс, музыка космоса и яркость космоса.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Боеприпасы на тандре снова соответствуют калибру автомата. Также, ради эксперимента выданы шлемы.</li>
+				<li class="bugfix">Трава ксенофагов больше не сажается в вентиляции.</li>
+				<li class="bugfix">Спрайты папок для бумаг снова на корабле.</li>
+				<li class="bugfix">Шлемы скафандров больше не делают из резоми жирафов.</li>
+				<li class="maptweak">Небольшие изменения размеров двигателя харона.</li>
+				<li class="maptweak">Яхта немного изменена в дизайне. Пофикшена вентиляция.</li>
+			</ul>
+
 			<h2 class="date">05 March 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
