--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,14 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">07 March 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлен титан как более дорогой аналог пластали. Лучше держит физические повреждения и прочнее. На данный момент, из него состоят шаттлы. Приобрести где-либо нельзя (пока что).</li>
+				<li class="maptweak">Изменён кабинет следователЕЙ.</li>
+				<li class="experiment">Изменены характеристики пластали с целью придания стенам более правдободных характеристик. В целом, они почти в два раза лучше стали в плане прочности и в 3 раза в плане взрывоустойчивости.</li>
+			</ul>
+
 			<h2 class="date">06 March 2018</h2>
 			<h3 class="author">Обновление от Bill-Luxe:</h3>
 			<ul class="changes bgimages16">
