--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,14 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">09 March 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлены особые (с пометкой special) протезы от некоторых фирм. Более тематичные и впринципе красивые. Ожидается балансировка.</li>
+				<li class="tweak">Бандады во вкладке mask больше не содержат особых видов, которые нельзя надеть на слот маски.</li>
+				<li class="bugfix">Спрайты скафандров унатхов изменены на старые ввиду графических проблем с новыми.</li>
+			</ul>
+
 			<h2 class="date">07 March 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
