--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,17 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">10 March 2018</h2>
+			<h3 class="author">Обновление от Bill-Luxe:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Оптические сенсоры больше не повреждаются сваркой без защиты.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлено отображение специальных протезов на персонаже. Имеется небольшой глюк с цветом 'глаз' - просто выберите подтип ещё раз, если вы IPC.</li>
+				<li class="bugfix">Оружейные шкафчики должны отображаться корректно.</li>
+			</ul>
+
 			<h2 class="date">09 March 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
