--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,28 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">11 March 2018</h2>
+			<h3 class="author">Обновление от Bill-Luxe:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">С эслакации, земля ей пухом, портированы мешки с песком. На данный момент, на корабле, что логично, не найти наполнителя.</li>
+				<li class="rscadd">С поляриса портирована анимация ползания.</li>
+				<li class="soundadd">Добавлен звук перемещения для каталок.</li>
+				<li class="soundadd">С Eris портированы некоторые звуки.</li>
+				<li class="tweak">Немного изменены цвета в OOC для разработчиков, администраторов и игроков.</li>
+				<li class="bugfix">Исправлено объявление о бане кого-либо.</li>
+				<li class="bugfix">Исправлено наличие сообщений об экзейме для гостоты.</li>
+				<li class="bugfix">Исправлен небольшой графический баг с открытием шлюзов.</li>
+				<li class="rscdel">Убрана задержка перед поеданием чего-либо.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлены раздатчики деталей для оборудования - микролазеры, наполнители и так далее. В РНД только детали, в инженерном отделе ещё и платы с лампочками. Имеют 'покупное' и взломанное содержимое.</li>
+				<li class="rscdel">Убрана карта станции Lar Maria по причине высокой нагрузки на процессор.</li>
+				<li class="balance">Изменено содержимое бывшего раздатчика плат инженерного отдела, в том числе взломанного и 'покупного' варианта.</li>
+				<li class="bugfix">Исправлен полный autohiss у резоми. Ч больше не заставляет вас картавить. Ррярешня в прошлом.</li>
+				<li class="imagedel">Возвращены старые настройки спрайта оружейного шкафчика.</li>
+			</ul>
+
 			<h2 class="date">10 March 2018</h2>
 			<h3 class="author">Обновление от Bill-Luxe:</h3>
 			<ul class="changes bgimages16">
