Послемерджевые фиксы. Чейнджлог.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,15 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">14 March 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлено изменение скорости передвижения и изменение получаемого урона в зависимости от носимого протеза. На данный момент, особыми характеристиками обладают только подвиды special от Гефестус И Такехеши. Полная роботизация в соответствующие модели доступна только для IPС (на данный момент). Характеристики в большинстве своём соответствуют тем, что были изложены на вики в разделе описания моделей IPC.</li>
+				<li class="rscadd">Боль у пациента влияет на шанс успешной операции. Заковывайте в смерительную рубашку, поите трамодолом или наконец-то покрутите клапан баллона с анестетиком.</li>
+				<li class="bugfix">Спрайты инъекторов должны быть в порядке.</li>
+				<li class="rscdel">Убрано разделение IPC на подклассы в связи с изменением протезов. Иные дополнения для ИПК, возможно, будут в ближайшем будущем.</li>
+			</ul>
+
 			<h2 class="date">11 March 2018</h2>
 			<h3 class="author">Обновление от Bill-Luxe:</h3>
 			<ul class="changes bgimages16">
