Ковыряние вилкой в системном блоке. Фикс чейнджлога.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -80,7 +80,7 @@
 				<li class="bugfix">Исправлена стыковка шаттла ОБР с кораблем.</li>
 				<li class="bugfix">АПЦ в Хароне подчиняется всем с доступом инженера.</li>
 			</ul>
-			<h3 class="author">Обновление от Unknown:</h3>
+			<h3 class="author">Обновление от Bear1ake:</h3>
 			<ul class="changes bgimages16">
 				<li class="tweak">Обновлена система выдачи стик-банов. В среднем, вылетов должно стать в 10 раз меньше.</li>
 				<li class="tweak">База Данных библиотеки поднята. Книжки должны сохраняться.</li>
