--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -59,23 +59,23 @@
 			<h2 class="date">16 March 2018</h2>
 			<h3 class="author">Обновление от Bill-Luxe:</h3>
 			<ul class="changes bgimages16">
-				<li class="rscadd">Портирован сжиматель мусора. Мусор превращается в блоки мусора, которые могут быть отправлены на ЦК. За каждый блок получается 5 кредитов. На данный момент, не добавлен на карту.</li>
-				<li class="rscadd">Портирована лебёдка для подъема и спуска ящиков между уровнями. На данный момент, не добавлен на карту.</li>
+				<li class="rscadd">Портирован пресс для мусора. Спрессованные предметы превращается в груду мусора, которая может быть переработана в обоженные блоки мусора для последующей отправки на ЦК. За каждый блок дается 5 бонусных очков снабжения. На данный момент, не добавлен на карту.</li>
+				<li class="rscadd">Портирована лебёдка для подъема и спуска ящиков между уровнями. На данный момент, не добавлена на карту.</li>
 				<li class="rscadd">Портирован генератор гравитации. На данный момент, не добавлен на карту.</li>
 				<li class="rscadd">Портирован перезаписыватель для касет с возможностью записи музыки прямо с компьютера. На данный момент, не добавлен на карту.</li>
 				<li class="rscadd">Портирована петля. Делается из проводов. Смерть без причины - признак дурачины.</li>
 				<li class="rscadd">Добавлен вариант котоушек без хвостика для самых серьезных нек.</li>
-				<li class="tweak">Стационарный проигрыватель (Jukebox) может принимать касеты и проигрывать их музыку. Касету, на данный момент, может получить только бармен. В будущем будет добавлено торговцам.</li>
+				<li class="tweak">Стационарный проигрыватель (Jukebox) может принимать касеты и проигрывать загруженную музыку. Касету, на данный момент, может получить только бармен. В будущем, будет добавлено торговцам.</li>
 				<li class="tweak">Если безбилетник или торговец уйдет в криосон - оповещение не появится.</li>
 				<li class="experiment">Возвращены старые настройки освещения без изменения цвета самого света.</li>
 			</ul>
 			<h3 class="author">Обновление от FirstTea:</h3>
 			<ul class="changes bgimages16">
-				<li class="rscadd">Добавлен гибрид материальных и сварочных очков. Доступлен при поднятии уровней технологий РНД.</li>
+				<li class="rscadd">Добавлен гибрид материальных и сварочных очков. Доступны при поднятии уровней технологий РНД.</li>
 			</ul>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
-				<li class="rscadd">Добавлена КАСЕТА СУДЬБЫ в карман бармена. Может записать любую музыку с компьютера и при вставлении в проигрыватель (портативный или стационарный) воспроизвести его. Перезаписи не подлежит, на данный момент. Расширение муызки - обязательно OGG.</li>
+				<li class="rscadd">Добавлена КАСЕТА СУДЬБЫ в карман бармена. Может записать любую музыку с компьютера и при вставке в проигрыватель (портативный или стационарный) воспроизвести его. Перезаписи не подлежит, на данный момент. Расширение муызки - обязательно OGG.</li>
 				<li class="tweak">Все главы получили номера своих департаментов с паролями. Все операции отслеживаются Исполнительным Офицером. Могут быть ошибки.</li>
 				<li class="bugfix">Исправлена стыковка шаттла ОБР с кораблем.</li>
 				<li class="bugfix">АПЦ в Хароне подчиняется всем с доступом инженера.</li>
