--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -68,6 +68,10 @@
 			<ul class="changes bgimages16">
 				<li class="tweak">Вариант кошачьих ушек без хвоста добавлен в лодаут - подтип обычных ушек.</li>
 				<li class="tweak">Удалена группа special branded jackets - единственная длинная куртка, что населяла данную группу, была перенесена в jackets selection.</li>
+				<li class="rscadd">Портирована гитара. Музыкальный инструменты добавлены в лодаут (instruments selecion).</li>
+				<li class="tweak">Добавлено 3 новых расцветки  зиппо - красная, синяя и с бабочкой.</li>
+				<li class="bugfix">Монитор от Гефестус Индастриз больше не появится в фабрикаторе в ближайшее время.</li>
+				<li class="maptweak">DEFCON 2 - добавлены бронированные створки на кабинеты SEA и КО. Также, защищены стекла в космос на складе. Активируются при блокировке мостика.</li>
 			</ul>
 
 			<h2 class="date">16 March 2018</h2>
