--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -60,7 +60,7 @@
 			<h3 class="author">Обновление от Bill-Luxe:</h3>
 			<ul class="changes bgimages16">
 				<li class="tweak">Добавлена возможность хранить дискеты и карты доступа в ящиках для документов.</li>
-				<li class="rscadd">Добавлен каргопад в игру. С помощью специального маркировщика можно телепортировать ящики к привязанному девайсу каргопаду. На карте пока отсутствует.</li>
+				<li class="rscadd">Добавлен каргопад. С помощью специального маркировщика можно телепортировать ящики к привязанному каргопаду. На карте пока отсутствует.</li>
 				<li class="soundadd">Безобидные удары получили собственые звуки.</li>
 				<li class="soundadd">Добавлен звук удара ломом.</li>
 			</ul>
@@ -68,7 +68,7 @@
 			<ul class="changes bgimages16">
 				<li class="tweak">Вариант кошачьих ушек без хвоста добавлен в лодаут - подтип обычных ушек.</li>
 				<li class="tweak">Удалена группа special branded jackets - единственная длинная куртка, что населяла данную группу, была перенесена в jackets selection.</li>
-				<li class="rscadd">Портирована гитара. Музыкальный инструменты добавлены в лодаут (instruments selecion).</li>
+				<li class="rscadd">Портирована гитара. Музыкальные инструменты добавлены в лодаут (instruments selecion).</li>
 				<li class="tweak">Добавлено 3 новых расцветки  зиппо - красная, синяя и с бабочкой.</li>
 				<li class="bugfix">Монитор от Гефестус Индастриз больше не появится в фабрикаторе в ближайшее время.</li>
 				<li class="maptweak">DEFCON 2 - добавлены бронированные створки на кабинеты SEA и КО. Также, защищены стекла в космос на складе. Активируются при блокировке мостика.</li>
