--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,13 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">20 March 2018</h2>
+			<h3 class="author">Обновление от Bill-Luxe:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлен эффект 'шума' для обладателей протизированных глаз и синтетиков.</li>
+				<li class="rscadd">Если вашему персонажу очень больно, помимо обычных эффектов также будет 'мерцать' экран.</li>
+			</ul>
+
 			<h2 class="date">18 March 2018</h2>
 			<h3 class="author">Обновление от First Tea:</h3>
 			<ul class="changes bgimages16">
