--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,24 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">23 March 2018</h2>
+			<h3 class="author">Обновление от Bill-Luxe:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлена возможность помечать пациентов с помощью медицинской ручки.</li>
+				<li class="rscadd">Добавлена анимация смены модуля и спрайта для киборгов.</li>
+				<li class="wip">Добавлено ограничительное поле для зрения. Вы не будете видеть людей сзади Вас, но сможете, например, преугадать где они находятся по своему слуху.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Ксенофаги (алиены) обновлены:</li>
+				<li class="tweak">Добавлено нормальное ночное зрение. Переключается во вкладке со способностями.</li>
+				<li class="tweak">Всем подвидам добавлены глаза с собственным цветом.</li>
+				<li class="balance">Изменена система лечения на траве. Приоритет в лечении, ради баланса, следующий: внешние повреждения, внутренние повреждения. Поврежденные органы перезапускаются и сразу начинают лечиться. Запуск последовательный и в случае наличия множества повреждений, не исключено, что отказавший орган отомрёт насовсем. Мозг не лечится от лежания на траве - возможно небольшое лечение до некоторого порога естественным путём, однако, лежа с поврежденным или неработащим сердцем без сознания - особь постепенно гибнет.</li>
+				<li class="rscadd">Немного о личиночной стадии:</li>
+				<li class="experiment">Принцип развития изменён. Для роста требуется пить кровь путем 'присасывания' к жертве. Возможно оторвать личинку от тела рукой. После двух 'кормлений', в теории, человек может умереть от недостатка крови.</li>
+				<li class="bugfix">Добавлено ночное зрение (которое, однако, работает немного криво).</li>
+			</ul>
+
 			<h2 class="date">20 March 2018</h2>
 			<h3 class="author">Обновление от Bill-Luxe:</h3>
 			<ul class="changes bgimages16">
