--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,22 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">25 March 2018</h2>
+			<h3 class="author">Обновление от Bill-Luxe:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлена анимация для атаки.</li>
+				<li class="rscadd">(Сотрудникам) F5 - хоткей для Asay. F7 - хоткей для Msay.</li>
+				<li class="soundadd">Обновлён звук детонации светошумовой гранаты.</li>
+				<li class="bugfix">Касета бармена больше не ломается при попытке загрузки в оную файла любого расширения помимо OGG, но OGG по-прежнему необходим.</li>
+				<li class="rscdel">Удален Field Of Viem (FOV) ввиду низкой оптимизированности и наличия багов, которые нельзя решить на данный момент. Возможно, будет возвращен в будущем.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Расположенные в технических помещениях вакантные или недоделаные отсеки теперь дают защиту от радиации.</li>
+				<li class="bugfix">Все спасательные капсулы теперь являются зонами для эвакуации антагонистов и экипажа.</li>
+				<li class="tweak">Убрано название у оружия. Оставлено лишь обозначение и вид.</li>
+			</ul>
+
 			<h2 class="date">23 March 2018</h2>
 			<h3 class="author">Обновление от Bill-Luxe:</h3>
 			<ul class="changes bgimages16">
