МОТД, чейнджлог, ссылки в дискорд.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -27,7 +27,7 @@
 			
 			<p><div align='center'><font size='3'><a href="http://wiki.baystation12.net/">Оригинальная Вики Baystation 12</a> | <a href="https://github.com/Baystation12/Baystation12/">Оригинальный код Baystation 12</a> | <a href="https://wiki.infinity-ss13.ru/">Наша Вики Baystation 12</a> | <a href="https://github.com/infinitystation/Baystation12/">Наш репозиторий</a></font></div></p>
             <font size='2'>Код лицезирован под <a href="http://www.gnu.org/licenses/agpl.html">AGPLv3</a>. Контент лицензирован под <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>.<br><br>
-			<font size='2'><b>Посетите наш сервер в дискорде: https://discord.gg/mn456xK </font>
+			<font size='2'><b>Посетите наш сервер в дискорде: https://discord.gg/N4atUkH </font>
 			</td>
 	</tr>
 </table>
@@ -56,6 +56,14 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">28 March 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="experiment">Наниматель наемников-подрывников решил, что он платит слишком много за уничтожение экспедиционного судна одной из ведущих сил в известном сегменте космоса, чтобы обеспечивать наемников оружием и продвинутыми скафандрами. В арсенал добавлены мешки с песком. Остались гранаты (кроме осколочных) и пистолеты P3 с одной запасной обоймой на каждый. Цена вещей в аплинке изменена в угоду новому балансу.</li>
+				<li class="balance">Стремные и непримечальные 'старые' скафандры наемников, до этого обладавшие всеми свойствами нормальных скафандров, потеряли примерно 20% всех своих характеристик. Например, если нормальный скафандр блокирует 50% урона пулями, то выданный - лишь 30%, например.</li>
+				<li class="rscadd">В аплинк наемников добавлены оба вида РИГов и нормальный скафандр.</li>
+			</ul>
+
 			<h2 class="date">25 March 2018</h2>
 			<h3 class="author">Обновление от Bill-Luxe:</h3>
 			<ul class="changes bgimages16">
