--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,15 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">29 March 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлен автомат с выбором противогазов и комбинезонов на базу нюкеров."</li>
+				<li class="bugfix">Исправлена низкая цена на РИГи нюки.</li>
+				<li class="tweak">Добавлен раздел 'броня' в аплинк. Содержимое захламленных разделов ресортировано.</li>
+				<li class="experiment">Возможно, главное изменение на этот год - игрушки-фигурки и миниатюрные меха больше не соразмерны егану.</li>
+			</ul>
+
 			<h2 class="date">28 March 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
