changes:   - rscadd: "В хранилище вещей камеры криосна на третьей палубе добавлен лазертаг."   - tweak: "При размещении катаны на слот крепления брони, спрайт переностся на спину. Также, катана ниндзи стала нерушимой и пласталльевой."   - tweak: "В бар добавлена камера и холодильник с напитками."   - spellcheck: "Исправлено сообщение при эмоции 'grin' (оскал с улыбкой). Изменены некоторые эмоции слизней."   - bugfix: "Исправлен доступ к РИГам в запасной E.V.A. на палубе мостика."   - bugfix: "Исправлены точки прибытия шаттла ЕРТ напротив мостика и стыковочного шлюза."

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,17 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">04 April 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В хранилище вещей камеры криосна на третьей палубе добавлен лазертаг.</li>
+				<li class="tweak">При размещении катаны на слот крепления брони, спрайт переностся на спину. Также, катана ниндзи стала нерушимой и пласталльевой.</li>
+				<li class="tweak">В бар добавлена камера и холодильник с напитками.</li>
+				<li class="spellcheck">Исправлено сообщение при эмоции 'grin' (оскал с улыбкой). Изменены некоторые эмоции слизней.</li>
+				<li class="bugfix">Исправлен доступ к РИГам в запасной E.V.A. на палубе мостика.</li>
+				<li class="bugfix">Исправлены точки прибытия шаттла ЕРТ напротив мостика и стыковочного шлюза.</li>
+			</ul>
+
 			<h2 class="date">01 April 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
