--- a/html/changelog.html
+++ b/html/changelog.html
@@ -56,6 +56,71 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">04 April 2018</h2>
+			<h3 class="author">Devildabeast updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Adds a mech recharger to the Security Armory.</li>
+			</ul>
+			<h3 class="author">afterthought updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Fixes roller bed SSD bug.</li>
+			</ul>
+			<h3 class="author">chaoko99 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">T-rays actually work on ninjas now.</li>
+				<li class="tweak">Portable atmospherics devices will now work off an APC if available.</li>
+			</ul>
+			<h3 class="author">mustafakalash updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">The Torch will once again always spawn on an asteroid.</li>
+				<li class="tweak">Changes occupation settings from a cycle to a list.</li>
+			</ul>
+
+			<h2 class="date">03 April 2018</h2>
+			<h3 class="author">Dukica updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">With the addition of a fancy new, tentacular helmet, the Skrell can now use the Rescue Module (Medical RIG) suit!</li>
+			</ul>
+			<h3 class="author">sabiram updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Added The Orb, a mining focused away site.</li>
+			</ul>
+
+			<h2 class="date">02 April 2018</h2>
+			<h3 class="author">Chinsky updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Finally swaps old stinky blood in Medbay for NANOBLOOD(TM). Use wisely.</li>
+				<li class="rscadd">Increased immersion.</li>
+				<li class="experiment">To further immerse you in your character, you now need to blink manually if you have organic eyes. There's helpful messages to remind you of that now.</li>
+				<li class="experiment">To help new players acclimatize to our high RP standards, helpful hints have been added, shown when you perform ceratin actions to guide to maximum RP path.</li>
+				<li class="experiment">As an experiment, different kinds of guns can now be selected in custom loadouts in Utility section. Everyone can get holsters too now. Spare ammo is not included.</li>
+			</ul>
+			<h3 class="author">sabiram updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="balance">Wizards can no longer teleport to non-station Z levels.</li>
+			</ul>
+
+			<h2 class="date">01 April 2018</h2>
+			<h3 class="author">Chinsky updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Liver damage change. Now when it's not working right, it doesn't apply staright up damage (only for alcohol), it builds up ammonia in the blood up to toxic levels. Better get those scrubbers going.</li>
+				<li class="tweak">Kidneys are doing similar thing, but with potassium.</li>
+				<li class="tweak">Potassium now raises pulse, dangerously so over 10u.</li>
+				<li class="tweak">Bananas now have bit of potassium in them.</li>
+			</ul>
+			<h3 class="author">Devildabeast updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Ports Grayson Arms prosthetics from Polaris.</li>
+				<li class="rscadd">Ports robolimb optics from Paradise.</li>
+				<li class="tweak">Vox can no longer be selected as a species when building an FBP.</li>
+				<li class="tweak">Morpheus prosthetics are no longer restricted to IPCs.</li>
+				<li class="tweak">The Morpheus Alt. head is now the default and the Monitor is a subtype.</li>
+			</ul>
+			<h3 class="author">afterthought updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">PDAs with medical access once again have a handheld medical scanner scanner program.</li>
+			</ul>
+
 			<h2 class="date">30 March 2018</h2>
 			<h3 class="author">PurpleMartinJCK updated:</h3>
 			<ul class="changes bgimages16">
@@ -580,76 +645,6 @@
 			<ul class="changes bgimages16">
 				<li class="bugfix">"Heat Exchange Pipes can now be properly constructed."</li>
 				<li class="tweak">"Heat Exchange Junctions will now exchange heat."</li>
-			</ul>
-
-			<h2 class="date">31 January 2018</h2>
-			<h3 class="author">CountAlex updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">"Adds away mission map XCV Ahab's Harpoon."</li>
-			</ul>
-			<h3 class="author">Memescope updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">Added new hairstyles, some ported from Eris.</li>
-				<li class="tweak">Low Bun back sprite tweaked.</li>
-				<li class="tweak">Half-Shaved Emo renamed to Long Side Emo.</li>
-			</ul>
-			<h3 class="author">chaoko99 updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">The T-Ray scanner now can be toggled via an action button.</li>
-				<li class="bugfix">Lasers now exist long enough that the game is likely to actually render them most of the time. I blame our tickrate.</li>
-			</ul>
-			<h3 class="author">comma updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">"Added Fleet patches for their respective Fleets of origin to loadaout. Check https://wiki.baystation12.net/Defence_Forces#The_Fleet for more deets"</li>
-			</ul>
-
-			<h2 class="date">30 January 2018</h2>
-			<h3 class="author">Chinsky updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="tweak">Shuffled around EC uniforms. SERVICE uniform is now a thing of its own, NOT a mix of utility+service. DRESS uniform is now service uniform + dress jacket + gloves.</li>
-				<li class="tweak">R&D lab refluffing. No longer 'Research', it is now called 'Fabrication' Lab. You are not 'discovering' things anymore. You are using high-tech fabricator that uses self-learning matrix to direct nanobots. Problem is, IT KEEPS GETTING MEMORY CORRUPTION. You are re-training bots by letting them practice on less complicated things before they can tackle more challenging blueprints.</li>
-			</ul>
-			<h3 class="author">Devildabeast updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="tweak">Gives the NanoTrasen badge to the NanoTrasen Liaison in their backpack; removes it from the NT formal outfit.</li>
-			</ul>
-			<h3 class="author">chaoko99 updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="tweak">Trash bags are no longer denied from holding the nuke disk. Try and figure that one out.</li>
-			</ul>
-
-			<h2 class="date">28 January 2018</h2>
-			<h3 class="author">Casper3667 updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">There are new bandanas in the loadout that can be worn on the head and over the mouth. Old bandanas are still available in the loadout.</li>
-			</ul>
-			<h3 class="author">Devildabeast updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">Adds the decorated harness, an Unathi-exclusive accessory complete with two dueling knives, to the loadout.</li>
-				<li class="tweak">Changed the dueling knife to a piss-weak variation of the kitchen knife.</li>
-				<li class="tweak">Changes scarves to be allowed for semi- and formal roles in the loadout.</li>
-			</ul>
-			<h3 class="author">Sbotkin updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="tweak">Several loadout access tweaks. More things for civilians and pilot's pin for the CO, XO, and Pathfinder.</li>
-			</ul>
-
-			<h2 class="date">27 January 2018</h2>
-			<h3 class="author">Casper3667 updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscdel">Taj curly, housewife, victory curls and finger curls hairstyles have been removed.</li>
-			</ul>
-			<h3 class="author">CountAlex updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="tweak">"Lowered the temperature at which a mob receives lung damage from -13C to -30C."</li>
-			</ul>
-			<h3 class="author">Orelbon updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">New glass door sprite.</li>
-			</ul>
-			<h3 class="author">chaoko99 updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">Added a parallaxing background space that changes colors every round.</li>
 			</ul>
 		</div>
 
