--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">06 April 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлены стазисные капсулы: стационарны и потребляют энергию во время работы, но по эффективности равны целым криомешкам без снижения оной со временем. Размещены в медицинские отсеки и шаттлы для дальних полетов.</li>
+			</ul>
+
 			<h2 class="date">04 April 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
