--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,16 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">17 April 2018</h2>
+			<h3 class="author">Обновление от Netreson:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Портированы две причёски: Modern и Long hair 4.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Монтировки на складе врачей и в шкафчиках парамедиков были заменены на более компактные аналоги.</li>
+			</ul>
+
 			<h2 class="date">06 April 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
