Бар и алюминиевые трубы.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -72,6 +72,8 @@
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
 				<li class="tweak">Монтировки на складе врачей и в шкафчиках парамедиков были заменены на более компактные аналоги.</li>
+				<li class="bugfix">Исправлены проблемы с вентиляцией у медбея, брига и РНД.</li>
+				<li class="maptweak">Перенесёна столовая с оригинала. Изменен размер бара.</li>
 			</ul>
 
 			<h2 class="date">06 April 2018</h2>
