--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -74,6 +74,8 @@
 				<li class="tweak">Монтировки на складе врачей и в шкафчиках парамедиков были заменены на более компактные аналоги.</li>
 				<li class="bugfix">Исправлены проблемы с вентиляцией у медбея, брига и РНД.</li>
 				<li class="maptweak">Перенесёна столовая с оригинала. Изменен размер бара.</li>
+				<li class="tweak">В раздатчик оборудования инженеров добавлена изолента. Также, изолента появилась на столах в отсеке и запасном хранилище инструментов.</li>
+				<li class="tweak">В подпольной хирургии появился набор инструментов и были спрятаны пакеты с кровью. Выживаемость умных предателей повысилась на 43%.</li>
 			</ul>
 
 			<h2 class="date">06 April 2018</h2>
