--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,13 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">18 April 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Обновлены языки ИПК. Теперь, они могут говорить на большинстве ксеноязыков за исключением набберского и невербального тяарского - анатомия не позволяет воспроизвести, но позволяет понимать.</li>
+				<li class="tweak">Унатхи стали хладнокровными подобно набберам и скреллам. Логично и холодно.</li>
+			</ul>
+
 			<h2 class="date">17 April 2018</h2>
 			<h3 class="author">Обновление от Bear1ake:</h3>
 			<ul class="changes bgimages16">
