--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -61,6 +61,8 @@
 			<ul class="changes bgimages16">
 				<li class="rscadd">Обновлены языки ИПК. Теперь, они могут говорить на большинстве ксеноязыков за исключением набберского и невербального тяарского - анатомия не позволяет воспроизвести, но позволяет понимать.</li>
 				<li class="tweak">Унатхи стали хладнокровными подобно набберам и скреллам. Логично и холодно.</li>
+				<li class="wip">Временно убрана рандомная генерация away-миссий, дабы карты нормально загружалась. Разработчики могут изменить загружаемые карты [[До фикса от Беевцев]].</li>
+				<li class="experiment">Скорость полета пуль увеличена на 60%.</li>
 			</ul>
 
 			<h2 class="date">17 April 2018</h2>
