--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -63,6 +63,8 @@
 				<li class="tweak">Унатхи стали хладнокровными подобно набберам и скреллам. Логично и холодно.</li>
 				<li class="wip">Временно убрана рандомная генерация away-миссий, дабы карты нормально загружалась. Разработчики могут изменить загружаемые карты [[До фикса от Беевцев]].</li>
 				<li class="experiment">Скорость полета пуль увеличена на 60%.</li>
+				<li class="bugfix">Подправлен спавн away-миссий. Проблем с NTSL быть не должно.</li>
+				<li class="tweak">Обновлён расширенный автохисс унатхов и резоми.</li>
 			</ul>
 
 			<h2 class="date">17 April 2018</h2>
