--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,24 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">19 April 2018</h2>
+			<h3 class="author">Обновление от Bear1ake:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлено больше математики в формулу вычисления попадания в цель. В частности, изменён разброс и повышен шанс попадания.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Портированы наши пляжные полотенца с ТГ. Имеется около 10 разновидностей, одна из которых стилизована под коврик для фитнесса - все можно взять в лодауте. С начала раунда имеются в тренажерном зале и на пляже голодека.</li>
+				<li class="rscadd">Расческа и дезодорант добавлены в лодаут. Если кто-то не знал - их можно взять в зеркалах, перетащив их на себя как сумку.</li>
+				<li class="tweak">Скафандры шахтеров и ученых оснащены магнитными ботинками.</li>
+				<li class="tweak">Убран эксплоит с тасканием схваченных по столу - не выдается стан. Будьте чесными борцами.</li>
+				<li class="tweak">Офицеру гаупвахты и главе отдела снабжения выдан сканер для проверки цены объектов.</li>
+				<li class="maptweak">Усилено освещение вокруг гидропонических ванночек.</li>
+				<li class="maptweak">Со стен в столовой был снят новый слой краски.</li>
+				<li class="maptweak">Заменена прорванная труба в гидропонике.</li>
+				<li class="experiment">Мощность вентиляции увеличена в два с половиной раза - работает и на закачку, и на откачку.</li>
+			</ul>
+
 			<h2 class="date">18 April 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
