--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">20 April 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">На овермап добавлено ещё две карты помимо астероида - не новые. Всё ещё ждём фикса случайной генерации.</li>
+			</ul>
+
 			<h2 class="date">19 April 2018</h2>
 			<h3 class="author">Обновление от Bear1ake:</h3>
 			<ul class="changes bgimages16">
