--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">21 April 2018</h2>
+			<h3 class="author">Обновление от RedKnightHero:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">В кабинеты глав на стол для собеседования добавлен интерком.</li>
+			</ul>
+
 			<h2 class="date">20 April 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
