--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,18 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">22 April 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В раздатчики одежды наемников добавлены наручные повязки.</li>
+				<li class="rscdel">Госты больше не могут взаимодействовать с компьютерами в телекоммуникациях и у запасного двигателя.</li>
+				<li class="rscdel">Мачете искателя путей со стального стало титановым.</li>
+				<li class="rscdel">При выпадании из шаттла вас унесёт в открытый космос, а не на уровень станции или ЦК.</li>
+				<li class="rscdel">Немного изменена система подачи топлива в камеры сгорания двигателей - прекращение подачи должно происходить быстрее.</li>
+				<li class="rscdel">В баллоне с анастезией с начала раунда выставлено минимальное пригодное для дыхания давление.</li>
+				<li class="rscdel">Автолат налётчиков перенесён на их шаттл.</li>
+			</ul>
+
 			<h2 class="date">21 April 2018</h2>
 			<h3 class="author">Обновление от RedKnightHero:</h3>
 			<ul class="changes bgimages16">
