--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,23 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">24 April 2018</h2>
+			<h3 class="author">Обновление от Bear1ake:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Старый чат удалён, на его место пришел новый (гуночат).</li>
+				<li class="wip">Потенциально пофикшены вылеты из-за нового чата.</li>
+			</ul>
+			<h3 class="author">Обновление от S.konoplich:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Left4zed стал сильнее в 2.5 раза.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="wip">Напольные декали (обводка на полу в коридорах и отсеках) добавлены на все палубы, кроме мостика. Ожидайте.</li>
+				<li class="maptweak">Пост охраны рядом с аварийным арсеналом обновлён.</li>
+				<li class="maptweak">Немного изменён коридор в ксенобиологию из РНД.</li>
+			</ul>
+
 			<h2 class="date">22 April 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
