--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -59,7 +59,7 @@
 			<h2 class="date">24 April 2018</h2>
 			<h3 class="author">Обновление от Bear1ake:</h3>
 			<ul class="changes bgimages16">
-				<li class="rscadd">Старый чат удалён, на его место пришел новый (гуночат).</li>
+				<li class="rscadd">Добавлен (гуночат). Вы можете вернуть старый, если нажмёте кнопку "Fix Chat".</li>
 				<li class="wip">Потенциально пофикшены вылеты из-за нового чата.</li>
 			</ul>
 			<h3 class="author">Обновление от S.konoplich:</h3>
